<resources>
    <string name="app_name">Mirafox</string>
    <string name="profile">Я</string>
    <string name="exchange">Биржа</string>
    <string name="notification">Уведомления</string>
    <string name="chats">Чаты</string>
    <string name="orders">Заказы</string>
    <string name="page_under_construction">Страница в разработке</string>
    <string name="cancelled_work">Отмененно</string>
    <string name="done_work">Выполненно</string>
    <string name="in_work">В работе</string>
    <string name="nedded_data">Предоставьте данные</string>
    <string name="tools_user">Петров</string>
    <string name="tools_text_date_order">27.08.2019</string>
    <string name="tools_text_price">45 000 ₽</string>
    <string name="tools_text_status">В Работе</string>
</resources>